# Medallion

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  go.mod  go.sum  pyproject.toml  test_medallion.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: publish.yml
.specify/memory/: constitution.md
cmd/medallion/: main.go
docs/: medallion_prd.md
examples/: python_examples.py
examples/research_and_answer/: config.yaml  workflow.yaml
examples/research_and_answer/agents/: analyzer.yaml  planner.yaml  researcher.yaml  reviewer.yaml  writer.yaml
internal/cli/: build.go  kg.go  root.go  run.go  trace.go
internal/kg/: driver.go  query_parser.go
internal/orchestrator/: orchestrator.go
internal/prompt/: loader.go
internal/providers/: types.go
internal/providers/ollama/: client.go
internal/providers/openai/: client.go
medallion/: __init__.py  cli.py  llm.py  session.py  sqlite_store.py  store.py  types.py
medallion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
medallion/core/: agent.py  client.py  knowledge_graph.py  workflow.py
medallion/providers/: __init__.py  ollama.py  openai.py
proto/: medallion.proto
specs/001-medallion-v1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-medallion-v1/checklists/: requirements.md
specs/001-medallion-v1/contracts/: api.md  store-interface.md
tests/contract/: test_schema_contract.py
tests/integration/: test_store_integration.py
tests/performance/: test_scope_query_performance.py
tests/unit/: test_llm.py  test_session.py  test_sqlite_store.py  test_store.py  test_types.py
